--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  weather: ^2.0.0
+  weather: ^3.0.0 # Ensure you have a version that is compatible with http ^1.0.0
   intl: ^0.19.0
   lottie: ^3.1.2
-  geolocator: ^7.7.0
+  geolocator: ^8.2.0
   geocoding: ^2.0.0
+  http: ^1.0.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
